# pre_hackaton_plan

./: README.md
fast_API_ini/: .env  .gitignore  frontend.py  main.py  pyproject.toml
fast_API_ini/app/: app.py  db.py  schema.py  users.py
pre_hack_2/: .env  FeynmanPractice.jsx  RAGFlashcardApp.jsx  index.css  index.html  main.jsx  package-lock.json  package.json  pyproject.toml  tailwind.config.js
pre_hack_2/api/: config.py  gemini.py  main.py  pypdf_utils.py  speech.py  supabase.py  text_processing.py
pre_hack_2/api/routes/: generate.py  upload.py
pre_hack_2/frontend/: RAGFlashcardApp.jsx
